# axenil-chess

./: .travis.yml  Cargo.toml  README.md
chess_gui/: Cargo.toml
chess_gui/src/: chess_controller.rs  chess_gui_view.rs  main.rs
rust_chess/: Cargo.toml
rust_chess/data/: board.txt  castling_test.txt  checkmate_test.txt
rust_chess/src/: board.rs  lib.rs  main.rs  moves.rs  units.rs
rust_chess/tests/: basic_moves.rs  board.rs  full_games.rs  units.rs
rust_chess/tests/test_data/: black_promotion.txt  checkmate.txt  passant.txt  promotion.txt  random.txt  stalemate.txt
